2010-08-03  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Fixed log4x modules
	check from old id value 30 to new id value 24

2010-08-03  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added a id_policy_module
	field into agente_modulo table for future use

2010-08-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.list.php: Fixed a problem alert filtering
	by priority does not work.

2010-08-02  Ramon Novoa  <rnovoa@artica.es>

	* include/pchart_graph.php, include/fgraph.php: Removed title from
	  image charts. Show min, max and avg as part of the image.

2010-08-02  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php, include/fgraph.php,
	  include/functions_fsgraph.php, operation/agentes/stat_win.php: Moved
	  min, max and avg information into the chart to make it available to
	  reports an custom graphs.

2010-08-02  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_filemanager.php: cleaned source code, changed the show
	to buttons of actions (create file, upload...) to out the list of files. And
	check if the directory is writeable to show this buttons.
	
	* include/get_file.php: added file to work as mediator between the Pandora
	and file system, and added a some security checks as check login and others.
	
2010-07-30  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Typo fix 
	into new table name

2010-07-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php
	include/help/en/help_network_map.php
	include/help/es/help_network_map.php
	pandoradb.sql
	operation/agentes/networkmap.topology.php
	operation/agentes/networkmap.groups.php
	operation/agentes/ver_agente.php
	operation/agentes/networkmap.php
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Created network maps
	storage on database, clean the network maps code and fixed some